--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ api_keys/
 # Ignore update scripts
 update_awsserver.sh
 update_page.sh
+
+# Ignore SSL CERTIFICATES 
+nginx/ssl/star.samana.cloud.2024.crt
+nginx/ssl/star.samana.cloud.2024.key
