Update to version 0.56 Beta

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx:latest
 
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY ssl/star.samana.cloud.2024.crt /etc/nginx/ssl/star.samana.cloud.2024.crt
-COPY ssl/star.samana.cloud.2024.key /etc/nginx/ssl/star.samana.cloud.2024.key
+COPY ssl/star.samana.cloud.2024.pem /etc/nginx/ssl/star.samana.cloud.2024.pem
