--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,7 +31,7 @@ http {
         server_name scp.samana.cloud;
 
         ssl_certificate /etc/nginx/ssl/star.samana.cloud.2024.crt;
-        ssl_certificate_key /etc/nginx/ssl/star.samana.cloud.2024.key;
+        ssl_certificate_key /etc/nginx/ssl/star.samana.cloud.2024.pem;
 
         location /api/ {
             proxy_pass http://backend_php:80;
