--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,6 +21,7 @@ ARG GOOGLE_CLIENT_ID
 ARG GOOGLE_CLIENT_SECRET
 ARG SITE_URL
 ARG VITE_OPENAI_API_KEY
+ARG VITE_FEEDBACK_FOLDER
 
 
 # Set environment variables from build-time ARGs
@@ -28,6 +29,7 @@ ENV VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
 ENV VITE_GOOGLE_CLIENT_SECRET=${VITE_GOOGLE_CLIENT_SECRET}
 ENV VITE_SITE_URL=${SITE_URL}
 ENV VITE_OPENAI_API_KEY=${VITE_OPENAI_API_KEY}
+ENV VITE_FEEDBACK_FOLDER=${VITE_FEEDBACK_FOLDER}
 
 
 # Start the app (adjust if your build creates a different file)
