Updated README.md for SCP 0.7 Beta release

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -60,6 +60,7 @@ ARG SITE_URL
 ARG AWS_SECRET_ACCESS_KEY
 ARG AWS_ACCESS_KEY_ID
 ARG AWS_DEFAULT_REGION
+ARG VITA_SLACK_BOT_TOKEN
 
 
 
@@ -74,3 +75,4 @@ ENV SITE_URL=${SITE_URL}
 ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 ENV AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
 ENV AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+ENV VITA_SLACK_BOT_TOKEN=${VITA_SLACK_BOT_TOKEN}
