--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -24,6 +24,7 @@ ARG VITE_OPENAI_API_KEY
 ARG VITE_FEEDBACK_FOLDER
 ARG VITE_CV_FOLDER
 ARG VITE_IMAGES_FOLDER
+ARG VITA_SLACK_BOT_TOKEN
 
 # Set environment variables from build-time ARGs
 ENV VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
@@ -33,7 +34,7 @@ ENV VITE_OPENAI_API_KEY=${VITE_OPENAI_API_KEY}
 ENV VITE_FEEDBACK_FOLDER=${VITE_FEEDBACK_FOLDER}
 ENV VITE_CV_FOLDER=${VITE_CV_FOLDER}
 ENV VITE_IMAGES_FOLDER=${VITE_IMAGES_FOLDER}
-
+ENV VITA_SLACK_BOT_TOKEN=${VITA_SLACK_BOT_TOKEN}
 
 
 # Start the app (adjust if your build creates a different file)
