Samana Careerpath v0.8 Pre-Release: Updated README to get details about this version

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -60,8 +60,9 @@ ARG SITE_URL
 ARG AWS_SECRET_ACCESS_KEY
 ARG AWS_ACCESS_KEY_ID
 ARG AWS_DEFAULT_REGION
-ARG VITA_SLACK_BOT_TOKEN
-
+ARG SLACK_BOT_TOKEN
+ARG OPENAI_API_KEY
+ARG VITE_OPENAI_AI_MODEL
 
 
 # Set environment variables from build-time ARGs
@@ -75,4 +76,6 @@ ENV SITE_URL=${SITE_URL}
 ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 ENV AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
 ENV AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
-ENV VITA_SLACK_BOT_TOKEN=${VITA_SLACK_BOT_TOKEN}
+ENV SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
+ENV OPENAI_API_KEY=${OPENAI_API_KEY}
+ENV VITE_OPENAI_AI_MODEL=${VITE_OPENAI_AI_MODEL}
